Closed Bug 1416597 Opened 8 years ago Closed 8 years ago

Logging.cpp includes Sprintf.h twice but doesn't include Printf.h

Categories

(Core :: XPCOM, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox59 --- fixed

People

(Reporter: cpearce, Assigned: cpearce)

References

Details

Attachments

(1 file)

xpcom/base/Logging.cpp #includes "mozilla/Sprintf.h" twice, but doesn't #include "mozilla/Printf.h". This causes the uses of Printf to not compile in release non-unified builds in gecko-media. Logging.cpp should #include "mozila/Printf.h".
Attachment #8927684 - Flags: review?(nfroyd) → review+
Pushed by cpearce@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/cf6e51eb9bae Include Printf.h in Logging.cpp. r=froydnj
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: