Bug 1416597 - Include Printf.h in Logging.cpp. r=froydnj

MozReview-Commit-ID: 5ZMMkvaOKtO

--HG--
extra : rebase_source : 6b50d30388b9e9e5ba0b2cec6117d6a9f91920ef